Remove dependency on request library

--- a/package.json
+++ b/package.json
@@ -3,22 +3,17 @@
   "version": "1.0.0",
   "description": "A Danbooru feed script using Discord's webhooks.",
   "main": "hookbot.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jimmyy4/Discordbooru.git"
+    "url": "git+https://github.com/Hexugory/Discordbooru.git"
   },
-  "author": "jimmyy4",
+  "author": "Hexugory",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jimmyy4/Discordbooru/issues"
+    "url": "https://github.com/Hexugory/Discordbooru/issues"
   },
-  "homepage": "https://github.com/jimmyy4/Discordbooru#readme",
+  "homepage": "https://github.com/Hexugory/Discordbooru#readme",
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.7"
+    "dotenv": "^16.4.5"
   }
 }
